# SafeProvinceMonitor

./: .replit  README.md  manage.py  pyproject.toml  replit.md
accounts/: admin.py  apps.py  models.py  serializers.py  signals.py  tests.py  urls.py  views.py
accounts/migrations/: 0001_initial.py
attached_assets/: Pasted--Project-Saaf-Sasta-Safe-Provincial-Reform-Monitoring-Portal-Tech-Stack-Django--1751027546302_1751027546304.txt
dashboard/: admin.py  models.py  serializers.py  tests.py  urls.py  views.py
dashboard/management/commands/: load_dummy_data.py  update_kpi_demo.py
dashboard/migrations/: 0001_initial.py
reform_portal/: asgi.py  settings.py  urls.py  wsgi.py
static/css/: custom.css
static/js/: charts.js  dashboard.js  map.js
templates/: base.html
templates/accounts/: login.html  profile.html
templates/dashboard/: feedback.html  home.html  map.html  procurement.html  project_detail.html
